tests/NormalTests/paczka1/fuzzy1/74897376.err
Error in line 12: S481 A784 33,3
Error in line 23: NUTGRNIx A784 32,8
Error in line 26: NUTGRNIx A433 59,5
Error in line 34: fZ3GA S69 62,0
